<resources>
    <string name="app_name">Ocean</string>

    <string name="tool_bar_title_country_list_screen">Select Language</string>

    <string name="exit_confirmation_dialog_title">Are you sure?</string>
    <string name="exit_confirmation_dialog_message">Do you want to exit?</string>

    <string name="common_button_yes">Yes</string>
    <string name="common_button_no">No</string>
    <string name="common_button_cancel">Cancel</string>

    <string name="introduction_message">Welcome to\nOcean app</string>

    <string name="menu_title_add_item">Add new</string>
    <string name="menu_item_dictionary">Dictionary</string>
    <string name="menu_item_start_test">Start test</string>
    <string name="menu_item_speaker">Speaker</string>

    <string name="dialog_image_downloading_title">Download resources</string>
    <string name="dialog_image_downloading_message">Some resources need to be downloaded. For better experience, please wait.</string>
    <string name="dialog_image_downloading_button_download">Download</string>

    <string name="button_apply">Apply</string>

    <string name="toast_message_selecting_language">You are selecting this language</string>

    <string name="text_input_hint">Enter text here</string>
    <string name="text_translate">Translate</string>

    <string name="toast_message_no_input">No text to translate</string>

    <string name="test">Hello Dagger</string>

    <string name="dialog_text_message_recording">Recording…</string>

    <string name="button_original_text">Original</string>
    <string name="button_translated_text">Translated</string>
    <string name="button_send_to_translate_home">Send to Translate Home</string>
    <string name="button_select_all">Select all</string>
    <string name="bt_share">Share</string>

    <!-- Selection button -->
    <string name="button_copy">Copy</string>
    <string name="button_translate">Translate</string>

    <!-- No text for translation -->
    <string name="message_no_text_for_translation">No text for translation</string>

    <!-- Sign in screen-->
    <string name="message_sign_in_with_account">Sign in with your account</string>
    <string name="message_email">Email</string>
    <string name="message_password">Password</string>
    <string name="button_sign_in">Sign in</string>
    <string name="message_sign_in_option">or sign in with</string>
    <string name="message_no_account">Don\'t have an account? SIGN UP</string>
    <string name="error_message_no_email_input">Email should not be empty</string>
    <string name="error_message_email_not_valid">Email is not valid</string>
    <string name="error_message_no_password_input">Password should not be empty</string>

    <string name="button_settings">Settings</string>
    <string name="button_notification">Notification</string>
    <string name="button_log_out">Log out</string>

    <string name="button_theme">Dark Theme</string>
</resources>