<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_20_percent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1" />

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline_20_percent"/>

    <TextView
        android:id="@+id/tv_sign_in_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/message_sign_in_with_account"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_logo"
        android:textColor="@color/black"
        android:textSize="25dp"
        android:textStyle="bold"
        android:layout_marginTop="50dp"/>

    <TextView
        android:id="@+id/tv_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_sign_in_title"
        android:text="@string/message_email"
        android:textColor="@color/color_gray"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="30dp"/>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/InputTextLayout"
        android:theme="@style/Theme.Ocean"
        android:id="@+id/layout_email"
        android:layout_width="0dp"
        android:layout_height="60dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_email"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="30dp">

        <com.google.android.material.textfield.TextInputEditText
            style="@style/TextInputSignIn"
            android:id="@+id/ti_email"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:inputType="textEmailAddress"/>

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_email"
        android:text="@string/message_password"
        android:textColor="@color/color_gray"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="30dp"/>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/InputTextLayout"
        android:theme="@style/Theme.Ocean"
        android:id="@+id/layout_password"
        android:layout_width="0dp"
        android:layout_height="60dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="30dp"
        app:layout_constraintTop_toBottomOf="@id/tv_password"
        app:passwordToggleEnabled="true"
        app:passwordToggleDrawable="@drawable/show_password_selector"
        app:endIconMode="password_toggle">

        <com.google.android.material.textfield.TextInputEditText
            style="@style/TextInputSignIn"
            android:id="@+id/ti_password"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:imeOptions="actionNext"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        style="@style/SignButton"
        android:id="@+id/bt_sign_in"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_password"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="50dp"
        android:text="@string/button_sign_in"/>

    <TextView
        android:id="@+id/tv_sign_in_option"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bt_sign_in"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="50dp"
        android:text="@string/message_sign_in_option"
        android:textColor="@color/color_gray"/>

    <LinearLayout
        android:id="@+id/ll_sign_in_method"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_sign_in_option"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="50dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_google"
            android:layout_width="70dp"
            android:layout_height="40dp"
            android:padding="10dp"
            android:background="@drawable/rounded_icon_background"
            android:src="@drawable/google"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>