<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.component.ocr.OCRFragment"
    android:id="@+id/parent_view">

    <androidx.camera.view.PreviewView
        android:id="@+id/viewFinder"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <View
            android:id="@+id/v_opacity"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha="0.2"
            android:background="@color/white"
            android:translationZ="1dp"
            android:visibility="invisible" />
    </androidx.camera.view.PreviewView>

    <ImageView
        android:id="@+id/back_button"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:src="@drawable/back_icon"
        android:translationZ="1dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/bt_exit_preview_mode"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:src="@drawable/icon_delete_white"
        android:translationZ="2dp"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/flash_button"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:src="@drawable/flash_off_icon"
        app:layout_constraintStart_toEndOf="@id/back_button"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/bt_image_capture"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginBottom="50dp"
        android:src="@drawable/image_capture_icon"
        android:translationZ="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
    
    <ImageView
        android:id="@+id/bt_gallery"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginBottom="65dp"
        android:layout_marginStart="30dp"
        android:translationZ="1dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:src="@drawable/gallery_icon"
        app:backgroundTint="@color/background_gray"/>

    <com.example.ocean.ui.component.ocr.GraphicOverlay
        android:id="@+id/graphicOverlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <ImageView
        android:id="@+id/iv_captured_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:translationZ="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_20_percent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/coordinator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:translationZ="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_bottom_sheet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_background"
            android:visibility="invisible"
            android:paddingBottom="30dp"
            app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_top"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="30dp"/>

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="30dp"/>

            <include
                android:id="@+id/input_language_country"
                layout="@layout/layout_language_country"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintStart_toEndOf="@id/guideline_left"
                app:layout_constraintTop_toTopOf="@id/guideline_top"
                app:layout_constraintWidth_percent="0.3"
                app:layout_constraintDimensionRatio="2.5:1" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="30dp"/>

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_revert"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:clickable="true"
                app:layout_constraintStart_toEndOf="@id/input_language_country"
                app:layout_constraintEnd_toStartOf="@id/output_language_country"
                app:layout_constraintTop_toTopOf="@id/input_language_country"
                app:layout_constraintBottom_toBottomOf="@id/input_language_country"
                android:src="@drawable/exchange_language_icon"
                android:background="?android:attr/selectableItemBackgroundBorderless"
                android:layout_marginHorizontal="@dimen/margin_15"/>

            <include
                android:id="@+id/output_language_country"
                layout="@layout/layout_language_country"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintTop_toTopOf="@id/guideline_top"
                app:layout_constraintEnd_toStartOf="@id/guideline_right"
                app:layout_constraintWidth_percent="0.3"
                app:layout_constraintDimensionRatio="2.5:1"/>

            <HorizontalScrollView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/guideline_left"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/input_language_country"
                android:layout_marginTop="20dp"
                android:fillViewport="false"
                android:measureAllChildren="false"
                android:scrollbars="none">

                <LinearLayout
                    android:id="@+id/ll_utility"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/bt_send_text_to_home"
                        style="@style/UtilityButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/button_send_to_translate_home"
                        app:icon="@drawable/back_icon" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/bt_select_all"
                        style="@style/UtilityButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/button_select_all"
                        app:icon="@drawable/t_icon"
                        android:layout_marginStart="@dimen/margin_s"/>

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/bt_share"
                        style="@style/UtilityButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/bt_share"
                        app:icon="@drawable/share_icon"
                        android:layout_marginStart="@dimen/margin_s"
                        android:layout_marginEnd="@dimen/margin_10"/>

                </LinearLayout>

            </HorizontalScrollView>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</androidx.constraintlayout.widget.ConstraintLayout>